# amplitude-collector

./: .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.tests  Makefile  README.md  amplitude.py  app.py  arch.drawio  docker-compose.perf.yml  docker-compose.test.yml  docker-compose.yml  go.mod  go.sum  pyproject.toml  requirements.txt  test.http  test.sh
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: push.yml
amplitude_collector/: app.py  config.py  handlers.py  kafka_producer.py
cmd/amplitude-collector/: amplitude-collector.go
perf/: payloads.js  script.js
src/: amplitude.py  app.py  config.py  handlers.py  kafka_producer.py
tests/: Dockerfile  conftest.py  resources.py  test.http  test.sh  test_collect.py
