[tool.poetry]
name = "amplitude-collector"
version = "0.5.0"
description = ""
authors = ["Andrey Tatarinov <a@tatarinov.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
starlette = "^0.31.1"
uvicorn = "^0.23.2"
python-multipart = "^0.0.6"
kafka-python = "^2.0.2"
pytest = "^7.1.3"
starlette-exporter = "^0.16.0"
freezegun = "^1.2.2"
orjson = "^3.9.7"
uuid7 = "^0.1.0"

[tool.poetry.group.dev.dependencies]
mypy = "*"
pytest = "*"
pytest-benchmark = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
